unpackaged/main/default/objects/sked_Travel_Time_Breakdown_Setting__mdt/sked_Travel_Time_Breakdown_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Travel Time Breakdown Setting</label>
    <pluralLabel>Travel Time Breakdown Settings</pluralLabel>
</CustomObject>