unpackaged/main/default/objects/sked_Travel_Time_Breakdown_Setting__mdt/fields/sked_End_At_Time_2__c.field-meta.xml
<CustomField>
    <fullName>sked_End_At_Time_2__c</fullName>
    <label>End At Time 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>