unpackaged/main/default/objects/sked_Travel_Time_Breakdown_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>sked_Weekday__c</columns>
    <columns>sked_Start_At_Time_1__c</columns>
    <columns>sked_End_At_Time_1__c</columns>
    <columns>sked_Start_At_Time_2__c</columns>
    <columns>sked_End_At_Time_2__c</columns>
    <columns>sked_Start_At_Time_3__c</columns>
    <columns>sked_End_At_Time_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>